@@ -1,3 +1,3 @@
 #!/bin/sh
 
-exec newpid -in "$@"
+exec newpid -inu "$@"
